# OOP2_Project_Shlomo-Rubin-328617428

./: CMakeLists.txt  README.Shlomo
include/: Game.h  GameObject.h  GameOverState.h  Goal.h  IGameState.h  LevelManager.h  MenuState.h  Obstacle.h  Platform.h  PlayState.h  Player.h
resources/levels/: level1.txt  level2.txt
src/: Game.cpp  GameOverState.cpp  Goal.cpp  LevelManager.cpp  MenuState.cpp  Obstacle.cpp  Platform.cpp  PlayState.cpp  Player.cpp  main.cpp
